--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/TitleScreen.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Prefabs/Items/machine_gun.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Upgrades/", "res://Prefabs/", "res://Prefabs/upgrades/", "res://Prefabs/Items/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/TitleScreen.tscn")
-current_scene="res://Scenes/TitleScreen.tscn"
+open_scenes=PackedStringArray("res://Scenes/Debug.tscn")
+current_scene="res://Scenes/Debug.tscn"
 center_split_offset=-244
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/AI/Enemy.gd", "res://Scripts/Gun/Gun.gd", "res://Scripts/TitleScreen/MenuIcon.gd", "res://Scripts/player/Player.gd", "res://Scripts/World/Spikes.gd", "res://Scripts/TitleScreen/Title.gd", "res://Scripts/World/World.gd"]
-selected_script="res://Scripts/TitleScreen/MenuIcon.gd"
+open_scripts=["res://Scripts/Upgrades/ArmorItem.gd", "res://Scripts/AI/Enemy.gd", "res://Scripts/Upgrades/Exploding_Bullets.gd", "res://Scripts/Gun/Gun.gd", "res://Scripts/UI/ItemDesc.gd", "res://Scripts/TitleScreen/MenuIcon.gd", "res://Scripts/player/Player.gd", "res://Scripts/Npcs/Shopkeeper.gd", "res://Scripts/World/Spikes.gd", "res://Scripts/TitleScreen/Title.gd", "res://Scripts/Upgrades/Upgrade.gd", "res://Scripts/Upgrades/UpgradeItem.gd", "res://Scripts/Upgrades/Up_Armor.gd", "res://Scripts/Upgrades/Up_Luck.gd", "res://Scripts/Upgrades/Up_ReloadOnEnemykill.gd", "res://Scripts/World/World.gd"]
+selected_script="res://Scripts/Gun/Gun.gd"
 open_help=[]
 script_split_offset=150
 list_split_offset=11
