--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -49,12 +49,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 6.0,
-"selection": false,
+"row": 21,
+"scroll_position": 62.0,
+"selection": true,
+"selection_from_column": 12,
+"selection_from_line": 21,
+"selection_to_column": 25,
+"selection_to_line": 21,
 "syntax_highlighter": "GDScript"
 }
 
@@ -165,11 +169,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
-"scroll_position": 2.0,
+"row": 3,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -179,11 +183,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 45,
+"column": 46,
 "folded_lines": Array[int]([50, 60, 65, 70, 84, 109, 199, 204, 217, 262]),
 "h_scroll_position": 0,
 "row": 246,
-"scroll_position": 65.0,
+"scroll_position": 71.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -295,11 +299,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 42,
-"scroll_position": 0.0,
+"row": 61,
+"scroll_position": 39.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -309,10 +313,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -323,16 +327,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 6,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 11,
-"selection_to_column": 32,
-"selection_to_line": 11,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -397,16 +397,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 56,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 33,
-"selection_to_column": 14,
-"selection_to_line": 36,
+"row": 46,
+"scroll_position": 28.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -443,11 +439,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 56,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 0.0,
+"row": 35,
+"scroll_position": 17.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -522,10 +518,10 @@ state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 15,
-"folded_lines": Array[int]([166]),
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 96,
-"scroll_position": 85.0,
+"row": 310,
+"scroll_position": 288.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -652,6 +648,20 @@ state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 22,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/UI/ItemDesc.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 6,
