--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -29,6 +29,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Scripts/Gun/Gun.gd"
 }, {
+"base": &"Node2D",
+"class": &"ItemDesc",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/UI/ItemDesc.gd"
+}, {
 "base": &"CharacterBody2D",
 "class": &"Player",
 "icon": "",
