--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Sprites/", "res://Sprites/Projectiles/", "res://Sprites/Projectiles/Fireball/", "res://Sprites/Guns/", "res://Scripts/Upgrades/")
+dock_filesystem_selected_paths=PackedStringArray("res://Prefabs/Items/FireStaff.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Sprites/", "res://Sprites/Projectiles/", "res://Sprites/Projectiles/Fireball/", "res://Sprites/Guns/", "res://Scripts/Upgrades/", "res://Prefabs/", "res://Prefabs/Items/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Debug.tscn")
-current_scene="res://Scenes/Debug.tscn"
+open_scenes=PackedStringArray("res://Scenes/Debug.tscn", "res://Prefabs/Items/FireStaff.tscn")
+current_scene="res://Prefabs/Items/FireStaff.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Projectiles/Bullet.gd", "res://Scripts/AI/Enemy.gd", "res://Scripts/UI/EnemyHealthBar.gd", "res://Scripts/Projectiles/Explosion.gd", "res://Scripts/Gun/Gun.gd", "res://Scripts/UI/PausedScreen.gd", "res://Scripts/player/Player.gd", "res://Scripts/World/World.gd"]
-selected_script="res://Scripts/World/World.gd"
+selected_script="res://Scripts/Gun/Gun.gd"
 open_help=[]
 script_split_offset=150
 list_split_offset=11
