--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,18 +9,18 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=21
+dock_split_2=52
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
-dock_hsplit_3=-315
+dock_hsplit_2=261
+dock_hsplit_3=-300
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Sprites/Projectiles/Fireball/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/Upgrades/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/World/Cheese.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/", "res://Scripts/World/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -32,10 +32,11 @@ current_scene="res://Scenes/Debug.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Projectiles/Bullet.gd", "res://Scripts/AI/Enemy.gd", "res://Scripts/World/Enemy_Spawner_Dict.gd", "res://Scripts/Projectiles/FireWall.gd", "res://Scripts/Gun/Gun.gd", "res://Scripts/AI/Wizzard/Phase1.gd", "res://Scripts/AI/Wizzard/Phase2.gd", "res://Scripts/UI/ReloadLabel.gd", "res://Scripts/World/World.gd"]
+open_scripts=["res://Scripts/Gun/Gun.gd", "res://Scripts/player/Gun_Handler.gd", "res://Scripts/player/Player.gd", "res://Scripts/player/Player_Moving_State.gd", "res://Scripts/World/World.gd"]
 selected_script="res://Scripts/World/World.gd"
 open_help=[]
 script_split_offset=150
