--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -23,6 +23,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Scripts/World/Enemy_Spawner_Data.gd"
 }, {
+"base": &"Node",
+"class": &"GenerationModel",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/World/GenerationModels/GenerationModel.gd"
+}, {
 "base": &"RigidBody2D",
 "class": &"Gun",
 "icon": "",
